--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^15.2.0",
     "@material/dialog": "^14.0.0",
     "bootstrap": "^5.3.2",
+    "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
+    "ngx-captcha": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
