--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-captcha": "^13.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
