--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-captcha": "^13.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
