--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@material/dialog": "^14.0.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "jquery": "^3.7.1",
     "material-components-web": "^14.0.0",
     "ng-recaptcha": "^11.0.0",
