--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@material/dialog": "^14.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "material-components-web": "^14.0.0",
     "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-captcha": "^13.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-quill": "^21.0.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
@@ -42,6 +45,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
+    "@types/quill": "^2.0.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
