--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-captcha": "^13.0.0",
+    "ngx-embed-video": "^1.0.4",
     "ngx-pagination": "^6.0.3",
     "ngx-quill": "^21.0.2",
     "ngx-toastr": "^18.0.0",
