--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/router": "^15.2.0",
     "@ckeditor/ckeditor5-angular": "^7.0.1",
     "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@material/dialog": "^14.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
