--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@material/dialog": "^14.0.0",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "material-components-web": "^14.0.0",
+    "net": "^1.0.2",
     "ng-recaptcha": "^11.0.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-captcha": "^13.0.0",
@@ -42,6 +45,8 @@
     "ngx-quill": "^21.0.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
@@ -54,6 +59,8 @@
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "@types/quill": "^2.0.14",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
