--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@ckeditor/ckeditor5-angular": "^7.0.1",
     "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@fullcalendar/angular": "^6.1.10",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
@@ -45,6 +46,7 @@
     "ngx-quill": "^21.0.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sentiment": "^5.0.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert": "^2.1.2",
